--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <title>LITRevu</title>
         <link rel="stylesheet" href="{% static 'authentication/style.css' %}">
         <link rel="stylesheet" href="{% static 'litrevu/style.css' %}">
-
+ <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <nav class="navbar">
