--- a/fonctionnement/templates/fonctionnement/review_delete.html
+++ b/fonctionnement/templates/fonctionnement/review_delete.html
@@ -13,6 +13,7 @@
                     <form action="" method="post">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Supprimer</button>
+                        <a href="{% url 'review-detail' id=review.id %}" class="btn btn-secondary">Retour</a>
                     </form>
                 </div>
             </div>
