--- a/fonctionnement/templates/fonctionnement/review_update.html
+++ b/fonctionnement/templates/fonctionnement/review_update.html
@@ -5,24 +5,31 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header">Modifier ma critique</div>
-
+                <div class="card-header">Modification de la review</div>
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="id_rating">Note</label>
-                            {{ form.rating }}
+                    <h3>Review</h3>
+                    <label for="{{ formReview.headline.id_for_label }}" class="form-label">Titre</label>
+                    <input type="text" class="form-control" id="{{ formReview.headline.id_for_label }}"
+                           name="{{ formReview.headline.name }}" value="{{ formReview.headline.value }}">
+                    <label for="{{ formReview.rating.id_for_label }}" class="form-label">Note</label>
+                    <div class="d-flex">
+                        {% for choice in formReview.rating.field.choices %}
+                        <div class="form-check form-check-inline mx-2">
+                            <input class="form-check-input" type="radio" name="{{ formReview.rating.name }}"
+                                   id="choice{{ forloop.counter }}" value="{{ choice.0 }}">
+                            <label class="form-check-label" for="choice{{ forloop.counter }}">{{ choice.1 }}</label>
                         </div>
-                        <div class="form-group">
-                            <label for="id_headline">Titre</label>
-                            {{ form.headline }}
-                        </div>
-                        <div class="form-group">
-                            <label for="id_body">Commentaire</label>
-                            {{ form.body }}
-                        </div>
-                        <button type="submit" class="btn btn-primary">Soumettre</button>
+                        {% endfor %}
+                    </div>
+                    <label for="{{ formReview.body.id_for_label }}" class="form-label">Commentaire</label>
+                    <textarea class="form-control" id="{{ formReview.body.id_for_label }}"
+                              name="{{ formReview.body.name }}" rows="4">{{ formReview.body.value }}</textarea>
+                </div>
+                        <button type="submit" class="btn btn-primary mt-2">Soumettre</button>
+                        <a href="{% url 'review-detail' id=formReview.instance.id %}" class="btn btn-secondary mt-2">Retour</a>
                     </form>
                 </div>
             </div>
@@ -30,3 +37,4 @@
     </div>
 </div>
 {% endblock %}
+
