--- a/fonctionnement/templates/fonctionnement/ticket_create.html
+++ b/fonctionnement/templates/fonctionnement/ticket_create.html
@@ -8,12 +8,22 @@
 
             <form action="" method="post" class="mt-3" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ ticket_form.as_p }}
 
-                <!-- Affichage du formulaire de photo -->
-                {{ photo_form.as_p }}
-
-                <button type="submit" class="btn btn-primary">Envoyer</button>
+                 <div class="form-group">
+                    <label for="{{ ticket_form.title.id_for_label }}" class="form-label">Titre</label>
+                    <input type="text" class="form-control" id="{{ ticket_form.title.id_for_label }}"
+                           name="{{ ticket_form.title.name }}" placeholder="Entrer un titre">
+                    <label for="{{ ticket_form.description.id_for_label }}" class="form-label">Description</label>
+                    <textarea class="form-control" id="{{ ticket_form.description.id_for_label }}"
+                              name="{{ ticket_form.description.name }}" rows="4"
+                              placeholder="Entrer une description"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="{{ photo_form.image.id_for_label }}" class="form-label">Télécharger l'image</label>
+                    <input type="file" class="form-control" id="{{ photo_form.image.id_for_label }}"
+                           name="{{ photo_form.image.name }}">
+                </div>
+                <button type="submit" class="btn btn-primary mt-2">Créer</button>
             </form>
         </div>
     </div>
