--- a/fonctionnement/templates/fonctionnement/ticket_delete.html
+++ b/fonctionnement/templates/fonctionnement/ticket_delete.html
@@ -13,7 +13,9 @@
                     <form action="" method="post">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Supprimer</button>
+                        <a href="{% url 'ticket-detail' id=ticket.id %}" class="btn btn-secondary">Retour</a>
                     </form>
+
                 </div>
             </div>
         </div>
