--- a/fonctionnement/templates/fonctionnement/ticket_update.html
+++ b/fonctionnement/templates/fonctionnement/ticket_update.html
@@ -6,21 +6,26 @@
         <div class="col-md-6">
             <h1>Modifier le ticket</h1>
 
-            <form action="" method="post" class="mt-3">
+            <form action="" method="post" class="mt-3"  enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-group">
-                    {{ form.title.label_tag }}
-                    {{ form.title}}
+                    <label for="{{ ticket_form.title.id_for_label }}" class="form-label">Titre</label>
+                    <input type="text" class="form-control" id="{{ ticket_form.title.id_for_label }}"
+                           name="{{ ticket_form.title.name }}" value="{{ ticket_form.title.value }}">
+                    <label for="{{ ticket_form.description.id_for_label }}" class="form-label">Description</label>
+                    <textarea class="form-control" id="{{ ticket_form.description.id_for_label }}"
+                              name="{{ ticket_form.description.name }}" rows="4"
+                              placeholder="Entrer une description">{{ ticket_form.description.value }}</textarea>
                 </div>
+
                 <div class="form-group">
-                    {{ form.description.label_tag }}
-                    {{ form.description}}
+                    <label for="{{ photo_form.image.id_for_label }}" class="form-label">Image actuelle</label>
+                    <img src="{{ photo_form.instance.image.url }}" class="img-fluid rounded mb-2" alt="Image du ticket">
+                    <input type="file" class="form-control" id="{{ photo_form.image.id_for_label }}"
+                           name="{{ photo_form.image.name }}">
                 </div>
-                <div class="form-group">
-                    {{ form.image.label_tag }}
-                    {{ form.image}}
-                </div>
-                <button type="submit" class="btn btn-primary">Envoyer</button>
+
+                <button type="submit" class="btn btn-primary mt-2">Valider</button>
             </form>
         </div>
     </div>
