--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -5,16 +5,23 @@
 
     <div class="left">
         <h3>Inscrivez-vous maintenant</h3>
-        <button onclick="window.location.href='{% url 'signup' %}'">S'inscrire</button>
+        <button onclick="window.location.href='{% url 'signup' %}'" class="btn btn-primary mt-2">S'inscrire</button>
     </div>
 
     <div class="right">
         <h3>Connectez-vous</h3>
         <p>{{ message }}</p>
         <form method="post">
-            {{ form.as_p }}
             {% csrf_token %}
-            <button type="submit" class="login-btn">Se connecter</button>
+            <div class="form-group">
+                <label for="{{ form.username.id_for_label }}">Nom d'utilisateur</label>
+                <input type="text" name="{{ form.username.name }}" class="form-control" id="{{ form.username.id_for_label }}" required>
+            </div>
+            <div class="form-group">
+                <label for="{{ form.password.id_for_label }}">Mot de passe</label>
+                <input type="password" name="{{ form.password.name }}" class="form-control" id="{{ form.password.id_for_label }}" required>
+            </div>
+            <button type="submit" class="btn btn-primary mt-2">Se connecter</button>
         </form>
     </div>
 </div>
