--- a/fonctionnement/templates/fonctionnement/ticket_create.html
+++ b/fonctionnement/templates/fonctionnement/ticket_create.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h1>Créer un nouveau ticket</h1>
+            <h1>Demander une critique</h1>
 
             <form action="" method="post" class="mt-3" enctype="multipart/form-data">
                 {% csrf_token %}
